--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Man Utd đại thắng ở Europa League",
+    "content": "Man Utd đã có một chiến thắng ấn tượng ở Europa League khi đánh bại Real Sociedad với tỷ số 4-1 trong trận lượt về, trong đó tiền vệ Bruno Fernandes ghi được hat-trick. Kết quả này giúp Man Utd giành chiến thắng chung cuộc 5-2 tại vòng 1/8. Đây là một bước tiến quan trọng của đội bóng trong giải đấu châu Âu.",
+    "link": "https://vnexpress.net/man-utd-dai-thang-o-europa-league-4861095.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Man Utd đã thắng đội nào trong trận Europa League vừa qua?",
+    "answers": [
+      {
+        "text": "Real Sociedad",
+        "correct": true
+      },
+      {
+        "text": "Barcelona",
+        "correct": false
+      },
+      {
+        "text": "AC Milan",
+        "correct": false
+      },
+      {
+        "text": "Liverpool",
+        "correct": false
+      },
+      {
+        "text": "Chelsea",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hút thuốc, hai anh em mắc ung thư phổi",
     "content": "Hai anh em 49 và 56 tuổi ở Hà Nội, có thói quen hút một bao thuốc lá mỗi ngày, đã mắc ung thư phổi. Người em phát hiện bệnh giai đoạn cuối và đã qua đời sau một năm điều trị. Kết quả tầm soát sức khỏe của người anh cho thấy ông cũng bị ung thư phổi, nguyên nhân chủ yếu do khói thuốc lá. Bác sĩ khuyến cáo người dân nên tầm soát ung thư phổi định kỳ, đặc biệt là những người có nguy cơ cao.",
     "link": "https://vnexpress.net/hut-thuoc-hai-anh-em-mac-ung-thu-phoi-4860498.html",
@@ -933,33 +964,6 @@
     ]
   },
   {
-    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
-    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
-    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
-    "answers": [
-      {
-        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
-        "correct": true
-      },
-      {
-        "text": "Chất xơ, đường, muối, protein",
-        "correct": false
-      },
-      {
-        "text": "Vitamin D, canxi, sắt, đồng",
-        "correct": false
-      },
-      {
-        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
     "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
     "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
@@ -987,28 +991,28 @@
     ]
   },
   {
-    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
-    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
-    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
+    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
+    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
+    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 8,
     "importance": 9,
-    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
+    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
     "answers": [
       {
-        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
+        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
         "correct": true
       },
       {
-        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
+        "text": "Chất xơ, đường, muối, protein",
         "correct": false
       },
       {
-        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
+        "text": "Vitamin D, canxi, sắt, đồng",
         "correct": false
       },
       {
-        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
+        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
         "correct": false
       }
     ]
@@ -1036,6 +1040,33 @@
       },
       {
         "text": "Vaccine HPV chỉ dành cho nam giới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
+    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
+    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
+    "answers": [
+      {
+        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
+        "correct": true
+      },
+      {
+        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
+        "correct": false
+      },
+      {
+        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
+        "correct": false
+      },
+      {
+        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
         "correct": false
       }
     ]
@@ -1153,6 +1184,33 @@
     ]
   },
   {
+    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
+    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
+    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
+    "answers": [
+      {
+        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
+        "correct": true
+      },
+      {
+        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
+        "correct": false
+      },
+      {
+        "text": "Vì ông không đủ điều kiện tài chính",
+        "correct": false
+      },
+      {
+        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
     "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
     "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
@@ -1202,33 +1260,6 @@
       },
       {
         "text": "Ngân hàng Phát triển Châu Á",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
-    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
-    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
-    "answers": [
-      {
-        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
-        "correct": true
-      },
-      {
-        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
-        "correct": false
-      },
-      {
-        "text": "Vì ông không đủ điều kiện tài chính",
-        "correct": false
-      },
-      {
-        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
         "correct": false
       }
     ]
@@ -2254,37 +2285,6 @@
     ]
   },
   {
-    "title": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam': Sử dụng điện tiết kiệm, an toàn và đúng cách",
-    "content": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' được tổ chức bởi Tổng công ty Điện lực miền Nam (EVNSPC) nhằm tuyên truyền về việc sử dụng điện tiết kiệm, an toàn và đúng cách. Lễ phát động cuộc thi diễn ra vào ngày 11-3-2025, đánh dấu kỷ niệm 50 năm thành lập ngành điện miền Nam và 50 năm giải phóng miền Nam, thống nhất đất nước. Cuộc thi không chỉ nhằm nâng cao nhận thức của người dân về việc tiết kiệm điện mà còn góp phần vào an ninh năng lượng quốc gia.",
-    "link": "https://tuoitre.vn/cuoc-thi-clip-50-nam-toa-sang-mien-nam-su-dung-dien-tiet-kiem-an-toan-va-dung-cach-20250313151048279.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' có mục đích gì?",
-    "answers": [
-      {
-        "text": "Tuyên truyền sử dụng điện tiết kiệm, an toàn và đúng cách",
-        "correct": true
-      },
-      {
-        "text": "Khuyến khích sử dụng điện một cách tự do",
-        "correct": false
-      },
-      {
-        "text": "Thiết lập quy định mới về sử dụng điện",
-        "correct": false
-      },
-      {
-        "text": "Đánh giá chất lượng điện năng",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức hội thảo về điện năng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Suzuki Swift sắp trở lại Việt Nam, nhập khẩu Nhật Bản",
     "content": "Mẫu xe Suzuki Swift thế hệ thứ 4 sẽ trở lại thị trường Việt Nam và được nhập khẩu trực tiếp từ Nhật Bản, dự kiến ra mắt vào cuối quý II năm 2025. Các đại lý hiện đang nhận cọc từ khách hàng và xe đã về cảng để làm thủ tục thông quan. So với phiên bản trước, Swift mới có một số cải tiến về thiết kế, đặc biệt là khoang lái, mặc dù kích thước tổng thể gần như không thay đổi.",
     "link": "https://vnexpress.net/suzuki-swift-sap-tro-lai-viet-nam-nhap-khau-nhat-ban-4860834.html",
@@ -2311,6 +2311,37 @@
       },
       {
         "text": "Đầu quý IV năm 2025",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam': Sử dụng điện tiết kiệm, an toàn và đúng cách",
+    "content": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' được tổ chức bởi Tổng công ty Điện lực miền Nam (EVNSPC) nhằm tuyên truyền về việc sử dụng điện tiết kiệm, an toàn và đúng cách. Lễ phát động cuộc thi diễn ra vào ngày 11-3-2025, đánh dấu kỷ niệm 50 năm thành lập ngành điện miền Nam và 50 năm giải phóng miền Nam, thống nhất đất nước. Cuộc thi không chỉ nhằm nâng cao nhận thức của người dân về việc tiết kiệm điện mà còn góp phần vào an ninh năng lượng quốc gia.",
+    "link": "https://tuoitre.vn/cuoc-thi-clip-50-nam-toa-sang-mien-nam-su-dung-dien-tiet-kiem-an-toan-va-dung-cach-20250313151048279.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' có mục đích gì?",
+    "answers": [
+      {
+        "text": "Tuyên truyền sử dụng điện tiết kiệm, an toàn và đúng cách",
+        "correct": true
+      },
+      {
+        "text": "Khuyến khích sử dụng điện một cách tự do",
+        "correct": false
+      },
+      {
+        "text": "Thiết lập quy định mới về sử dụng điện",
+        "correct": false
+      },
+      {
+        "text": "Đánh giá chất lượng điện năng",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức hội thảo về điện năng",
         "correct": false
       }
     ]
@@ -4441,33 +4472,6 @@
     ]
   },
   {
-    "title": "Lexus RZ 2026 - xe điện chuyển số giả lập",
-    "content": "Lexus vừa giới thiệu mẫu xe điện RZ 2026 mới tại châu Âu, với những cải tiến đáng kể về sức mạnh và công nghệ. Mẫu xe này được trang bị hệ thống lái steer-by-wire và công nghệ 'Interactive Manual Drive' giả lập hộp số sàn 8 cấp. Công suất của RZ550e lên tới 402 mã lực, cao hơn so với các phiên bản trước đó. Bộ pin cũng được nâng cấp, cho phép tăng thêm phạm vi lái lên tới 100 km theo chu kỳ WLTP.",
-    "link": "https://vnexpress.net/lexus-rz-2026-xe-dien-chuyen-so-gia-lap-4860738.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Mẫu xe điện Lexus RZ 2026 có những cải tiến gì mới?",
-    "answers": [
-      {
-        "text": "Hệ thống lái steer-by-wire và công nghệ giả lập hộp số sàn.",
-        "correct": true
-      },
-      {
-        "text": "Thiết kế ngoại thất hoàn toàn mới.",
-        "correct": false
-      },
-      {
-        "text": "Sử dụng động cơ xăng thay vì điện.",
-        "correct": false
-      },
-      {
-        "text": "Công suất giảm xuống còn 200 mã lực.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
     "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
     "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
@@ -4495,28 +4499,28 @@
     ]
   },
   {
-    "title": "Báo Mỹ: Tổng thống Putin có thể chấp nhận lệnh ngừng bắn ở Ukraine",
-    "content": "Theo thông tin từ Bloomberg, Tổng thống Nga Vladimir Putin có thể chấp nhận lệnh ngừng bắn do Mỹ đề xuất tại Ukraine, nhưng có thể sẽ trì hoãn để đàm phán các điều khoản có lợi cho Moscow. Ông Putin yêu cầu chấm dứt việc cung cấp vũ khí cho Ukraine như một điều kiện để đồng ý ngừng bắn. Tổng thống Ukraine Volodymyr Zelensky đã nhấn mạnh rằng Kiev sẽ không công nhận vùng lãnh thổ nào do Nga kiểm soát là của Nga trong thỏa thuận hòa bình tương lai.",
-    "link": "https://dantri.com.vn/the-gioi/bao-my-tong-thong-putin-co-the-chap-nhan-lenh-ngung-ban-o-ukraine-20250313001115218.htm",
-    "cat": "the-gioi",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Tổng thống Putin có thể chấp nhận lệnh ngừng bắn ở Ukraine không?",
+    "title": "Lexus RZ 2026 - xe điện chuyển số giả lập",
+    "content": "Lexus vừa giới thiệu mẫu xe điện RZ 2026 mới tại châu Âu, với những cải tiến đáng kể về sức mạnh và công nghệ. Mẫu xe này được trang bị hệ thống lái steer-by-wire và công nghệ 'Interactive Manual Drive' giả lập hộp số sàn 8 cấp. Công suất của RZ550e lên tới 402 mã lực, cao hơn so với các phiên bản trước đó. Bộ pin cũng được nâng cấp, cho phép tăng thêm phạm vi lái lên tới 100 km theo chu kỳ WLTP.",
+    "link": "https://vnexpress.net/lexus-rz-2026-xe-dien-chuyen-so-gia-lap-4860738.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Mẫu xe điện Lexus RZ 2026 có những cải tiến gì mới?",
     "answers": [
       {
-        "text": "Có, nhưng với điều kiện nhất định.",
+        "text": "Hệ thống lái steer-by-wire và công nghệ giả lập hộp số sàn.",
         "correct": true
       },
       {
-        "text": "Không, ông sẽ từ chối hoàn toàn.",
+        "text": "Thiết kế ngoại thất hoàn toàn mới.",
         "correct": false
       },
       {
-        "text": "Có, ông đã đồng ý ngay lập tức.",
+        "text": "Sử dụng động cơ xăng thay vì điện.",
         "correct": false
       },
       {
-        "text": "Không, ông không quan tâm đến lệnh ngừng bắn.",
+        "text": "Công suất giảm xuống còn 200 mã lực.",
         "correct": false
       }
     ]
