--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -216,6 +216,37 @@
     ]
   },
   {
+    "title": "Hơn 1.200 ôtô mới bán ra mỗi ngày tại Việt Nam",
+    "content": "Trong tháng 2 năm 2025, thị trường ôtô Việt Nam bán ra 37.128 chiếc, tương đương hơn 1.200 xe mỗi ngày, cho thấy sự phục hồi sau tháng 1 chậm chạp. VinFast dẫn đầu doanh số với hơn 12.500 xe, tăng 25% so với tháng trước. Mặc dù doanh số tăng, con số này vẫn thấp hơn so với trung bình năm 2024 là 1.354 xe mỗi ngày. Thị trường ôtô cũng ghi nhận sự tăng trưởng mạnh mẽ của xe điện, với VinFast chiếm 32,5% thị phần toàn ngành.",
+    "link": "https://vnexpress.net/hon-1-200-oto-moi-ban-ra-moi-ngay-tai-viet-nam-4861206.html",
+    "cat": "oto-xe-may",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tháng 2 năm 2025, thị trường ôtô Việt Nam bán được bao nhiêu chiếc mỗi ngày?",
+    "answers": [
+      {
+        "text": "Hơn 1.200 chiếc",
+        "correct": true
+      },
+      {
+        "text": "Hơn 1.500 chiếc",
+        "correct": false
+      },
+      {
+        "text": "Hơn 1.000 chiếc",
+        "correct": false
+      },
+      {
+        "text": "Hơn 1.300 chiếc",
+        "correct": false
+      },
+      {
+        "text": "Hơn 1.800 chiếc",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cá ngừ Việt Nam sang Anh tăng trưởng 'bậc thang'",
     "content": "Giá trị xuất khẩu cá ngừ Việt Nam sang Anh đã tăng từ 5,1 triệu USD năm 2021 lên gần 8 triệu USD năm 2024, và chỉ trong 2 tháng đầu năm 2025, tăng 24% so với cùng kỳ năm ngoái. Sự tăng trưởng này được lý giải nhờ các hiệp định thương mại tự do, như UKVFTA và CPTPP, giúp giảm thuế cho sản phẩm cá ngừ. Cá ngừ hiện là một trong những loại thực phẩm được ưa chuộng tại Anh, đặc biệt trong các món ăn nhanh.",
     "link": "https://tuoitre.vn/ca-ngu-viet-nam-sang-anh-tang-truong-bac-thang-20250314093251476.htm",
@@ -583,33 +614,6 @@
     ]
   },
   {
-    "title": "Người bệnh ung thư có nên kiêng thịt nướng?",
-    "content": "Người bệnh ung thư nên hạn chế tiêu thụ thịt nướng do các hợp chất độc hại có thể hình thành trong quá trình nướng, gây tăng nguy cơ mắc ung thư hoặc làm nặng thêm triệu chứng bệnh. Mặc dù không cần phải kiêng hoàn toàn, người bệnh nên ăn có chừng mực và ưu tiên các phương pháp chế biến lành mạnh hơn như hấp hoặc luộc. Việc tiêu thụ thịt nướng cần được kết hợp với nhiều rau củ và đủ nước để hỗ trợ tiêu hóa và giảm tác động tiêu cực của các chất độc hại. Chế độ ăn uống phù hợp sẽ giúp tăng cường hệ miễn dịch và hỗ trợ hồi phục sau điều trị.",
-    "link": "https://vnexpress.net/nguoi-benh-ung-thu-co-nen-kieng-thit-nuong-4861212.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người bệnh ung thư có nên kiêng thịt nướng không?",
-    "answers": [
-      {
-        "text": "Nên hạn chế tiêu thụ thịt nướng.",
-        "correct": true
-      },
-      {
-        "text": "Có thể ăn thoải mái thịt nướng.",
-        "correct": false
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Nên ăn thịt nướng hàng ngày.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cắt túi mật có giảm tuổi thọ?",
     "content": "Cắt túi mật không làm giảm tuổi thọ của người bệnh. Sau phẫu thuật, gan sẽ tiếp tục sản xuất dịch mật và đưa trực tiếp vào ruột non, giúp tiêu hóa thức ăn. Mặc dù người bệnh có thể gặp một số triệu chứng khó chịu trong thời gian đầu như đau và rối loạn tiêu hóa, nhưng sau khoảng ba tháng, cơ thể sẽ thích nghi và các triệu chứng này sẽ giảm dần. Việc tuân thủ chỉ định của bác sĩ và chăm sóc sức khỏe hợp lý là rất quan trọng sau phẫu thuật.",
     "link": "https://vnexpress.net/cat-tui-mat-co-giam-tuoi-tho-4861170.html",
@@ -663,6 +667,33 @@
       },
       {
         "text": "Vì xe có nhiều màu sắc lựa chọn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người bệnh ung thư có nên kiêng thịt nướng?",
+    "content": "Người bệnh ung thư nên hạn chế tiêu thụ thịt nướng do các hợp chất độc hại có thể hình thành trong quá trình nướng, gây tăng nguy cơ mắc ung thư hoặc làm nặng thêm triệu chứng bệnh. Mặc dù không cần phải kiêng hoàn toàn, người bệnh nên ăn có chừng mực và ưu tiên các phương pháp chế biến lành mạnh hơn như hấp hoặc luộc. Việc tiêu thụ thịt nướng cần được kết hợp với nhiều rau củ và đủ nước để hỗ trợ tiêu hóa và giảm tác động tiêu cực của các chất độc hại. Chế độ ăn uống phù hợp sẽ giúp tăng cường hệ miễn dịch và hỗ trợ hồi phục sau điều trị.",
+    "link": "https://vnexpress.net/nguoi-benh-ung-thu-co-nen-kieng-thit-nuong-4861212.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người bệnh ung thư có nên kiêng thịt nướng không?",
+    "answers": [
+      {
+        "text": "Nên hạn chế tiêu thụ thịt nướng.",
+        "correct": true
+      },
+      {
+        "text": "Có thể ăn thoải mái thịt nướng.",
+        "correct": false
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Nên ăn thịt nướng hàng ngày.",
         "correct": false
       }
     ]
@@ -1371,28 +1402,28 @@
     ]
   },
   {
-    "title": "Chi nửa triệu đồng một giờ để tập gym 1:1",
-    "content": "Trong bối cảnh ngày càng nhiều người tìm kiếm phương pháp tập luyện hiệu quả, nhiều người đã chuyển từ các phòng gym truyền thống sang mô hình gym private 1:1 với huấn luyện viên cá nhân. Chi phí cho mỗi buổi tập tại các phòng gym này khoảng 500.000 đồng, cao hơn so với việc mua thẻ tập tại các phòng gym lớn. Mô hình này được ưa chuộng vì sự cá nhân hóa trong quá trình tập luyện và khả năng tối ưu hóa kết quả. Tuy nhiên, vẫn có những hạn chế về chi phí và sự thiếu tương tác xã hội.",
-    "link": "https://vnexpress.net/chi-nua-trieu-dong-mot-gio-de-tap-gym-1-1-4859443.html",
-    "cat": "suc-khoe",
+    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
+    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
+    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
+    "cat": "gia-dinh",
     "positivity": 8,
     "importance": 7,
-    "question": "Tại sao nhiều người chọn tập gym 1:1 với huấn luyện viên cá nhân?",
+    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
     "answers": [
       {
-        "text": "Vì hiệu quả và sự cá nhân hóa trong tập luyện.",
+        "text": "Chấp nhận thực tế khác với kỳ vọng",
         "correct": true
       },
       {
-        "text": "Vì chi phí thấp hơn so với gym truyền thống.",
+        "text": "Không cho trẻ sử dụng thiết bị điện tử",
         "correct": false
       },
       {
-        "text": "Vì muốn tập ở không gian đông đúc.",
+        "text": "Luôn cứng rắn và không nhượng bộ con",
         "correct": false
       },
       {
-        "text": "Vì không có thời gian để tập luyện.",
+        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
         "correct": false
       }
     ]
@@ -1425,6 +1456,33 @@
     ]
   },
   {
+    "title": "Chi nửa triệu đồng một giờ để tập gym 1:1",
+    "content": "Trong bối cảnh ngày càng nhiều người tìm kiếm phương pháp tập luyện hiệu quả, nhiều người đã chuyển từ các phòng gym truyền thống sang mô hình gym private 1:1 với huấn luyện viên cá nhân. Chi phí cho mỗi buổi tập tại các phòng gym này khoảng 500.000 đồng, cao hơn so với việc mua thẻ tập tại các phòng gym lớn. Mô hình này được ưa chuộng vì sự cá nhân hóa trong quá trình tập luyện và khả năng tối ưu hóa kết quả. Tuy nhiên, vẫn có những hạn chế về chi phí và sự thiếu tương tác xã hội.",
+    "link": "https://vnexpress.net/chi-nua-trieu-dong-mot-gio-de-tap-gym-1-1-4859443.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao nhiều người chọn tập gym 1:1 với huấn luyện viên cá nhân?",
+    "answers": [
+      {
+        "text": "Vì hiệu quả và sự cá nhân hóa trong tập luyện.",
+        "correct": true
+      },
+      {
+        "text": "Vì chi phí thấp hơn so với gym truyền thống.",
+        "correct": false
+      },
+      {
+        "text": "Vì muốn tập ở không gian đông đúc.",
+        "correct": false
+      },
+      {
+        "text": "Vì không có thời gian để tập luyện.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "'Quả bom' dân số già của Malaysia",
     "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
     "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
@@ -1451,33 +1509,6 @@
       },
       {
         "text": "Chăm sóc trẻ em",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
-    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
-    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
-    "answers": [
-      {
-        "text": "Chấp nhận thực tế khác với kỳ vọng",
-        "correct": true
-      },
-      {
-        "text": "Không cho trẻ sử dụng thiết bị điện tử",
-        "correct": false
-      },
-      {
-        "text": "Luôn cứng rắn và không nhượng bộ con",
-        "correct": false
-      },
-      {
-        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
         "correct": false
       }
     ]
@@ -2627,33 +2658,6 @@
     ]
   },
   {
-    "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
-    "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
-    "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
-    "cat": "the-thao",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Amorim đã nói gì về sự chỉ trích của Ratcliffe đối với Man Utd?",
-    "answers": [
-      {
-        "text": "Ông thừa nhận đội bóng không thi đấu tốt và cần cải thiện.",
-        "correct": true
-      },
-      {
-        "text": "Ông cho rằng Ratcliffe đã sai khi chỉ trích cầu thủ.",
-        "correct": false
-      },
-      {
-        "text": "Ông không quan tâm đến lời chỉ trích của Ratcliffe.",
-        "correct": false
-      },
-      {
-        "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
     "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
     "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
@@ -2676,6 +2680,33 @@
       },
       {
         "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
+    "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
+    "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Amorim đã nói gì về sự chỉ trích của Ratcliffe đối với Man Utd?",
+    "answers": [
+      {
+        "text": "Ông thừa nhận đội bóng không thi đấu tốt và cần cải thiện.",
+        "correct": true
+      },
+      {
+        "text": "Ông cho rằng Ratcliffe đã sai khi chỉ trích cầu thủ.",
+        "correct": false
+      },
+      {
+        "text": "Ông không quan tâm đến lời chỉ trích của Ratcliffe.",
+        "correct": false
+      },
+      {
+        "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
         "correct": false
       }
     ]
@@ -4287,37 +4318,6 @@
       },
       {
         "text": "Cô đã kết hôn với một người đàn ông giàu có.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vô sinh do u não",
-    "content": "Bài viết nói về trường hợp của anh Quang, 39 tuổi, bị vô sinh do khối u ở não gây suy sinh dục. Sau 6 năm không có con, anh đã đến Trung tâm Hỗ trợ sinh sản để thực hiện thụ tinh trong ống nghiệm (IVF). Các bác sĩ cho biết khối u não của anh có thể làm ngừng sản xuất tinh trùng và hormone nam. Nếu không được điều trị, bệnh có thể gây ra các biến chứng nghiêm trọng.",
-    "link": "https://vnexpress.net/vo-sinh-do-u-nao-4860650.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Vô sinh do nguyên nhân gì trong trường hợp của anh Quang?",
-    "answers": [
-      {
-        "text": "Khối u não",
-        "correct": true
-      },
-      {
-        "text": "Bệnh tiểu đường",
-        "correct": false
-      },
-      {
-        "text": "Tăng huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Stress",
-        "correct": false
-      },
-      {
-        "text": "Thiếu dinh dưỡng",
         "correct": false
       }
     ]
